# ParallelNSGAII_G4

./: .gitignore  CMakeLists.txt  Makefile.chpc  Readme.md  parallelnsga2r  parallelnsga2r.cpp  problemdef.cpp  problemdef.h
input_data/: parab.in  shcf.in  shcf_best_pop.out  shcf_final_pop.out  shcf_initial_pop.out  shcf_params.out  template.in  templateNObin.in  thcf.in
src_NSGAII/: Readme.md  global.h  problemdef.cpp  problemdef.h
